--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             placeholder="Add new todo..." />
             <input 
              type="datetime-local" 
-              id="date">
+              id="date" placeholder="set time">
             <button
              type="submit" 
              class="btnlg"
